; ModuleID = '/home/carl/AnghaBench/openssl/crypto/ec/extr_ecp_mont.c_ec_GFp_mont_field_inv.c'
source_filename = "/home/carl/AnghaBench/openssl/crypto/ec/extr_ecp_mont.c_ec_GFp_mont_field_inv.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32*, i32, i32 }

@EC_F_EC_GFP_MONT_FIELD_INV = common dso_local global i32 0, align 4
@EC_R_CANNOT_INVERT = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @ec_GFp_mont_field_inv(%struct.TYPE_3__* %0, i32* %1, i32* %2, i32* %3) #0 {
  %5 = alloca i32, align 4
  %6 = alloca %struct.TYPE_3__*, align 8
  %7 = alloca i32*, align 8
  %8 = alloca i32*, align 8
  %9 = alloca i32*, align 8
  %10 = alloca i32*, align 8
  %11 = alloca i32*, align 8
  %12 = alloca i32, align 4
  store %struct.TYPE_3__* %0, %struct.TYPE_3__** %6, align 8
  store i32* %1, i32** %7, align 8
  store i32* %2, i32** %8, align 8
  store i32* %3, i32** %9, align 8
  store i32* null, i32** %10, align 8
  store i32* null, i32** %11, align 8
  store i32 0, i32* %12, align 4
  %13 = load %struct.TYPE_3__*, %struct.TYPE_3__** %6, align 8
  %14 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %13, i32 0, i32 0
  %15 = load i32*, i32** %14, align 8
  %16 = icmp eq i32* %15, null
  br i1 %16, label %17, label %18

17:                                               ; preds = %4
  store i32 0, i32* %5, align 4
  br label %78

18:                                               ; preds = %4
  %19 = load i32*, i32** %9, align 8
  %20 = icmp eq i32* %19, null
  br i1 %20, label %21, label %28

21:                                               ; preds = %18
  %22 = load %struct.TYPE_3__*, %struct.TYPE_3__** %6, align 8
  %23 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %22, i32 0, i32 2
  %24 = load i32, i32* %23, align 4
  %25 = call i32* @BN_CTX_secure_new_ex(i32 %24)
  store i32* %25, i32** %11, align 8
  store i32* %25, i32** %9, align 8
  %26 = icmp eq i32* %25, null
  br i1 %26, label %27, label %28

27:                                               ; preds = %21
  store i32 0, i32* %5, align 4
  br label %78

28:                                               ; preds = %21, %18
  %29 = load i32*, i32** %9, align 8
  %30 = call i32 @BN_CTX_start(i32* %29)
  %31 = load i32*, i32** %9, align 8
  %32 = call i32* @BN_CTX_get(i32* %31)
  store i32* %32, i32** %10, align 8
  %33 = icmp eq i32* %32, null
  br i1 %33, label %34, label %35

34:                                               ; preds = %28
  br label %72

35:                                               ; preds = %28
  %36 = load i32*, i32** %10, align 8
  %37 = call i32 @BN_set_word(i32* %36, i32 2)
  %38 = icmp ne i32 %37, 0
  br i1 %38, label %40, label %39

39:                                               ; preds = %35
  br label %72

40:                                               ; preds = %35
  %41 = load i32*, i32** %10, align 8
  %42 = load %struct.TYPE_3__*, %struct.TYPE_3__** %6, align 8
  %43 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %42, i32 0, i32 1
  %44 = load i32, i32* %43, align 8
  %45 = load i32*, i32** %10, align 8
  %46 = call i32 @BN_sub(i32* %41, i32 %44, i32* %45)
  %47 = icmp ne i32 %46, 0
  br i1 %47, label %49, label %48

48:                                               ; preds = %40
  br label %72

49:                                               ; preds = %40
  %50 = load i32*, i32** %7, align 8
  %51 = load i32*, i32** %8, align 8
  %52 = load i32*, i32** %10, align 8
  %53 = load %struct.TYPE_3__*, %struct.TYPE_3__** %6, align 8
  %54 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %53, i32 0, i32 1
  %55 = load i32, i32* %54, align 8
  %56 = load i32*, i32** %9, align 8
  %57 = load %struct.TYPE_3__*, %struct.TYPE_3__** %6, align 8
  %58 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %57, i32 0, i32 0
  %59 = load i32*, i32** %58, align 8
  %60 = call i32 @BN_mod_exp_mont(i32* %50, i32* %51, i32* %52, i32 %55, i32* %56, i32* %59)
  %61 = icmp ne i32 %60, 0
  br i1 %61, label %63, label %62

62:                                               ; preds = %49
  br label %72

63:                                               ; preds = %49
  %64 = load i32*, i32** %7, align 8
  %65 = call i64 @BN_is_zero(i32* %64)
  %66 = icmp ne i64 %65, 0
  br i1 %66, label %67, label %71

67:                                               ; preds = %63
  %68 = load i32, i32* @EC_F_EC_GFP_MONT_FIELD_INV, align 4
  %69 = load i32, i32* @EC_R_CANNOT_INVERT, align 4
  %70 = call i32 @ECerr(i32 %68, i32 %69)
  br label %72

71:                                               ; preds = %63
  store i32 1, i32* %12, align 4
  br label %72

72:                                               ; preds = %71, %67, %62, %48, %39, %34
  %73 = load i32*, i32** %9, align 8
  %74 = call i32 @BN_CTX_end(i32* %73)
  %75 = load i32*, i32** %11, align 8
  %76 = call i32 @BN_CTX_free(i32* %75)
  %77 = load i32, i32* %12, align 4
  store i32 %77, i32* %5, align 4
  br label %78

78:                                               ; preds = %72, %27, %17
  %79 = load i32, i32* %5, align 4
  ret i32 %79
}

declare dso_local i32* @BN_CTX_secure_new_ex(i32) #1

declare dso_local i32 @BN_CTX_start(i32*) #1

declare dso_local i32* @BN_CTX_get(i32*) #1

declare dso_local i32 @BN_set_word(i32*, i32) #1

declare dso_local i32 @BN_sub(i32*, i32, i32*) #1

declare dso_local i32 @BN_mod_exp_mont(i32*, i32*, i32*, i32, i32*, i32*) #1

declare dso_local i64 @BN_is_zero(i32*) #1

declare dso_local i32 @ECerr(i32, i32) #1

declare dso_local i32 @BN_CTX_end(i32*) #1

declare dso_local i32 @BN_CTX_free(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
